--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "flowy.min.js",
   "scripts": {
     "build": "rollup --config",
+    "start": "http-server ./dist -o",
     "docs": "http-server ./docs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -32,5 +33,9 @@
     "rollup": "^1.27.5",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-terser": "^5.1.2"
+  },
+  "dependencies": {
+    "rollup-plugin-copy": "^3.1.0",
+    "rollup-plugin-generate-html-template": "^1.6.0"
   }
 }
