prefer-arrow-callback rule

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "flowy.min.js",
   "scripts": {
     "build": "rollup --config",
-    "lint": "npx eslint src/lib/**/*",
-    "start": "http-server ./dist -o",
+    "lint": "npx eslint src/lib/**/*.js",
+    "start": "http-server ./dist",
     "build-docs": "rollup --config --environment OUTPUT:docs",
     "start-docs": "http-server ./docs -o",
     "test": "echo \"Error: no test specified\" && exit 1"
